# parallelExercises

./: .gitignore  README.md
tp1/: CMakeLists.txt  displayUtils.c  displayUtils.h  intrinsicsGcc.c  intrinsicsGcc.h  intrinsicsIntel.c  intrinsicsIntel.h  main.c
